Fix - layout cut off issue fix test3

--- a/assets/preset1_hart.css
+++ b/assets/preset1_hart.css
@@ -175,10 +175,22 @@
   padding-top: 1%;
 }
 
+.pg2-table-plot-box-lgeo {
+  /* width: 90%; */
+  display: block;
+  /* padding-top: 1%; */
+}
+
 .pg3-plot-lgeo {
   /* width: 90%; */
   display: block;
   padding-top: 1%;
+}
+
+.pg3-table-plot-box-lgeo {
+  /* width: 90%; */
+  display: block;
+  /* padding-top: 1%; */
 }
 
 /* .pg3-table-plot-box-lgeo {
